--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -79,7 +79,7 @@
     @apply border-border;
   }
   body {
-    @apply font-sans antialiased bg-background text-foreground;
+    @apply bg-background font-sans text-foreground antialiased;
   }
 }
 
